#+title: Change log of keyboard-visualizer
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/keyboard-visualizer]]

* Versions

** <2025-01-27>

A major refactor and some functional improvements

*Functionality Improvements:*
- Simplified and optimized keyside determination with `keyboard-visualizer--key-sides`.

*User Interaction:*
- Enhanced `keyboard-visualizer-menu` with clearer navigation:
  - Toggle ergonomic indicators, documentation display, and visualizer mode.
  - Explore commands via fuzzy search (`keyboard-visualizer-learn-command-by-query`) or random steps (`keyboard-visualizer-learning-step`).
  - Save the current layout with a dedicated option.
- Added `keyboard-visualizer-documentation-toggle` to enable/disable displaying command documentation.

*Refactoring:*
- Consolidated and streamlined redundant functions for simplicity and readability.
- Improved buffer management for visualizer output:
  - Handles layout buffer cleanup when disabling.
  - Ensures exclusive usage of the visualizer buffer.

*Keybindings:*
- Updated keybindings:
  - `C-c b` for opening `keyboard-visualizer-menu`.

** <2025-01-26>

Added ergonomic indicator

- Enhanced `keyboard-visualizer--draw-single-layout` to optionally highlight non-ergonomic key combinations based on chord-side alignment.
- Added `keyboard-visualizer--key-side` helper function to determine if a key belongs to the left or right side of the keyboard layout.
- Implemented `keyboard-visualizer-ergonomic-indicator-toggle` to allow toggling ergonomic highlighting via user interaction.
- Added a new customizable variable `keyboard-visualizer-ergonomic-indicator` to manage the state of the ergonomic indicator.